# quantum-krylov

./: .gitignore  LICENSE  README.md  adaptive_solver.py  block_encoding_model.py  cap_solver.py  car_solver.py  cg.py  cheb_bound.py  dct_cutnorm.py  diagram_cg.py  diagrams.py  experiment.ipynb  main.py  main_adaptive.py  main_cap.py  main_car.py  main_nonadaptive.py  main_semi_iterative.py  main_static.py  nonadaptive_solver.py  poly_test.py  process_results.py  pyproject.toml  runner.py  sampling.py  semi_iterative_solver.py  simulator.py  solver.py  static_solver.py  symqsp.py  test_basis.ipynb  util.py
