[project]
name = "quantum-krylov"
version = "0.1.0"
description = "Implementation of the paper 'Krylov-based Quantum Linear System Solvers'"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "matplotlib>=3.10.8",
    "gitpython>=3.1.46",
    "tqdm>=4.67.1",
]
